Name:           HaskBan
Version:        0.1
Cabal-Version:  >= 1.2
Author:         Román González, Jurriën Stutterheim
Synopsis:       Sokoban game
Build-Type:     Simple

Executable haskban
  Build-Depends:  base, parsec >= 3, containers, bytestring, mtl, hscurses
  Main-Is:        Main.hs
  Hs-Source-Dirs: .

